@@ -16,11 +16,12 @@ h3. Version 1.1 (NOT OFFICIALLY RELEASED YET)
 
 * The @gather@-step in @PipesPipeline@ has the transformation step internal to it and thus, not two pipes when PipeFunction provided
 * @GatherPipe@ no longer locks on looping and is semantically sound for depth-first traversing
-* Added @Pipe.enablePath(boolean)@ method to support the turning on/off of path calculations
+* Added @Pipe.enablePath(boolean)@ method to support the turning on/off of path calculations (efficiency reasons)
 * Renamed @Pipe.getPath()@ to @Pipe.getCurrentPath()@
 * @SideEffectCapPipe@ moved to the @transform@ package as it was wrongly organized in the @sideeffect@ package
-* Fixed an indexing issues in @ExhaustMergePipe@ that made itself apparent when two split/merges happened in the same pipeline
+* Fixed an indexing issue in @ExhaustMergePipe@ that made itself apparent when two split/merges happened in the same pipeline
 * Added @Tree@ and @TreePipe@ to return a tree representation of a traversal
+* Merged @PathPipe@ and @PathFunctionPipe@ into one class called @PathPipe@
 
 h2. Pipes 0.X
 
